# omega-zero

./: .gitignore  Makefile  README.md  board.cpp  board.hpp  mcts.cpp  mcts.hpp  misc.cpp  misc.hpp  mldata.cpp  mldata.hpp  network.cpp  network.hpp  node.cpp  train.py  train.sh
cpp/: CMakeLists.txt  board.cpp  main.cpp  mcts.cpp  mcts.hpp  mldata.cpp  mldata.hpp  network.hpp  node.hpp  play.cpp  read_mldata.cpp
cpp/config/: CMakeLists.txt  config.cpp  config.hpp
cpp/mcts/: CMakeLists.txt  board.cpp  board.hpp  mcts.cpp  mcts.hpp  misc.cpp  misc.hpp  mldata.cpp  mldata.hpp  node.cpp  node.hpp
cpp/network/: CMakeLists.txt  model.cpp  model.hpp  server.cpp  server.hpp
python/: init_model.py  knockout.py  mediator.py  meditator.py  mldata.py  model.py  network.ipynb  train.py  train_model.py
